add link to tree-specific view in main tree view

--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -27,7 +27,7 @@
             <tbody>
                 {% for name, tree in trees.items() %}
                     <tr>
-                        <td>{{ name }}</td>
+                        <td><a href="treestatus/{{ name }}">{{ name }}</a></td>
                         <td><span class="{{ tree.status | treestatus_to_status_badge_class }}">{{ tree.status }}</span></td>
                         <td>{{ tree.reason }}</td>
                         <td>{{ ", ".join(tree.tags) }}</td>
