add a TODO about potentially changing the CSS classes

--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -8,6 +8,7 @@
 {% block page_title %}Treestatus{% endblock %}
 
 {% block main %}
+<!-- TODO should this page use the same classes as a stack? -->
 <main class="StackPage container fullhd">
     <h1>Treestatus</h1>
     <p>Current status of Mozilla's version-control repositories.</p>
