--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -33,7 +33,6 @@
         <table class="table">
             <thead>
                 <tr>
-
                     {% if is_user_authenticated_TODO() %}
                     <th></th>
                     {% endif %}
@@ -45,11 +44,12 @@
                 </tr>
             </thead>
             <tbody>
-                {% for name, tree in trees.items() %}
+                {% for name, label in treestatus_update_form.trees.choices %}
+                    {% set tree = trees[name] %}
                     <tr>
                         {% if is_user_authenticated_TODO() %}
                             <td>
-                            <input type="checkbox" id="{{ name }}" name="{{ name }}">
+                            {{ treestatus_update_form.trees }}
                             </td>
                         {% endif %}
                         <td><a href="{{ name }}">{{ name }}</a></td>
