add todo for adding tags input

--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -28,6 +28,7 @@
             <div>{{ treestatus_update_form.reason.label }}: {{ treestatus_update_form.reason() }}</div>
             <div>{{ treestatus_update_form.message_of_the_day.label }}: {{ treestatus_update_form.message_of_the_day() }}</div>
             <div>{{ treestatus_update_form.remember_this_change.label }}: {{ treestatus_update_form.remember_this_change() }}</div>
+            {# TODO add tags input #}
             <button class="button" title="Submit">Change tree status</button>
         {% endif %}
         <table class="table">
