--- a/landoui/templates/treestatus/stack.html
+++ b/landoui/templates/treestatus/stack.html
@@ -9,12 +9,33 @@
 
 {% block main %}
 <main class="StackPage container fullhd">
-    <h1>Treestatus</h1>
+    <h1>Treestatus: Stack</h1>
     <p>Current status of Mozilla's version-control repositories.</p>
 
-    <h2>Change Stack<h2>
     <div class="StackPage-stack">
         <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Status</th>
+                    <th>Reason</th>
+                    <th>Trees</th>
+                    <th>When</th>
+                    <th>Who</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for status_change in stack %}
+                    <tr>
+                        <td>{{ status_change.id }}</td>
+                        <td>{{ status_change.status }}</td>
+                        <td>{{ status_change.reason }}</td>
+                        <td>{{ status_change.trees | map(attribute="tree") | join(",") }}</td>
+                        <td>{{ status_change.when }}</td>
+                        <td>{{ status_change.who }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
         </table>
     </div>
 </main>
