--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -21,6 +21,14 @@
             the page a form which is used to select trees and forward the
             selection to the tree status updating form.
         #}
+        <form action="{{ url_for("treestatus.new_tree") }}" method="post">
+            {{ treestatus_new_tree_form.hidden_tag() }}
+            <div>{{ treestatus_new_tree_form.tree.label }}: {{ treestatus_new_tree_form.tree() }}</div>
+            <div>{{ treestatus_new_tree_form.status.label }}: {{ treestatus_new_tree_form.status() }}</div>
+            <div>{{ treestatus_new_tree_form.reason.label }}: {{ treestatus_new_tree_form.reason() }}</div>
+            <div>{{ treestatus_new_tree_form.message_of_the_day.label }}: {{ treestatus_new_tree_form.message_of_the_day() }}</div>
+            <button class="button" title="Submit">Add new tree</button>
+        </form>
         {% if is_user_authenticated_TODO() %}
             <form action="{{ url_for('treestatus.update_treestatus') }}" method="post" >
             {{ treestatus_update_form.csrf_token }}
