update text to be specific to the current tree

--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -11,7 +11,7 @@
 <!-- TODO should this page use the same classes as a stack? -->
 <main class="StackPage container fullhd">
     <h1>Treestatus: {{ tree }}</h1>
-    <p>Current status of Mozilla's version-control repositories.</p>
+    <p>Current status of {{ tree }}.</p>
 
     <div class="StackPage-stack">
         <table class="table">
