add buttons and display all tree changes

--- a/landoui/templates/treestatus/recent_changes.html
+++ b/landoui/templates/treestatus/recent_changes.html
@@ -16,29 +16,37 @@
                 <th>Reason</th>
                 <th>When</th>
                 <th>Who</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             {% for status_change in recent_changes_stack %}
                 <tr>
-                    <td>{{ status_change.id }}</td>
-                    <td>
-                        <ul>
-                            {% for tree in status_change.trees %}
-                            <li>{{ tree.tree }} from 
-                                <span class="{{ tree.last_state.status | treestatus_to_status_badge_class }}">
-                                    {{ tree.last_state.status }}
-                                </span> to 
-                                <span class="{{ tree.last_state.current_status| treestatus_to_status_badge_class }}">
-                                    {{ tree.last_state.current_status }}
-                                </span>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                    <td>{{ status_change.reason }}</td>
-                    <td>{{ status_change.when }}</td>
-                    <td>{{ status_change.who }}</td>
+                    <form action="{{ url_for("treestatus.") }}" method="patch">
+                        <td>{{ status_change.id }}</td>
+                        <td>
+                            <ul>
+                                {% for tree in status_change.trees %}
+                                <li>{{ tree.tree }} from 
+                                    <span class="{{ tree.last_state.status | treestatus_to_status_badge_class }}">
+                                        {{ tree.last_state.status }}
+                                    </span> to 
+                                    <span class="{{ tree.last_state.current_status| treestatus_to_status_badge_class }}">
+                                        {{ tree.last_state.current_status }}
+                                    </span>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                        <td>{{ status_change.reason }}</td>
+                        <td>{{ status_change.when }}</td>
+                        <td>{{ status_change.who }}</td>
+                        <td>
+                            <button>Restore</button>
+                            <button>Update</button>
+                            <button>Discard</button>
+                        </td>
+                    </form>
                 </tr>
             {% endfor %}
         </tbody>
