avoid a trailing space

--- a/landoui/templates/treestatus/recent_changes.html
+++ b/landoui/templates/treestatus/recent_changes.html
@@ -27,11 +27,11 @@
                     <td>
                         <ul>
                             {% for tree in status_change.trees %}
-                            <li>{{ tree.tree }} from 
-                                <span class="{{ tree.last_state.status | treestatus_to_status_badge_class }}">
+                            <li>{{ tree.tree }}
+                                 from <span class="{{ tree.last_state.status | treestatus_to_status_badge_class }}">
                                     {{ tree.last_state.status }}
-                                </span> to 
-                                <span class="{{ tree.last_state.current_status| treestatus_to_status_badge_class }}">
+                                </span>
+                                 to <span class="{{ tree.last_state.current_status | treestatus_to_status_badge_class }}">
                                     {{ tree.last_state.current_status }}
                                 </span>
                             </li>
