set "tags" to just be a simple "reason category" field

--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -22,7 +22,7 @@
                     <th>Id</th>
                     <th>Status</th>
                     <th>Reason</th>
-                    <th>Tags</th>
+                    <th>Reason Category</th>
                     <th>When</th>
                     <th>Who</th>
                 </tr>
