--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -38,7 +38,7 @@
                         <th>Name</th>
                         <th>Status</th>
                         <th>Reason</th>
-                        <th>Tags</th>
+                        <th>Reason Category</th>
                         <th>Message of the Day</th>
                     </tr>
                 </thead>
