--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -24,6 +24,7 @@
         <a href="{{ url_for("treestatus.new_tree") }}">
             <button class="button" title="New Tree">New Tree</button>
         </a>
+        <button class="select-all-trees">Select all trees</button>
         <form action="{{ url_for("treestatus.update_treestatus_form") }}" method="post">
             <div>
                 <button class="Treestatus-updateTreeButton button" title="Update Tree">Update trees</button>
