make the update trees button primary

--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -27,7 +27,7 @@
         <button class="button select-all-trees">Select all trees</button>
         <form action="{{ url_for("treestatus.update_treestatus_form") }}" method="post">
             <div>
-                <button class="Treestatus-updateTreeButton button" title="Update Tree">Update trees</button>
+                <button class="Treestatus-updateTreeButton button is-primary" title="Update Tree">Update trees</button>
             </div>
             <table class="table">
                 <thead>
