add missing `Treestatus` class to log.html

--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -9,7 +9,7 @@
 
 {% block main %}
 <!-- TODO should this page use the same classes as a stack? -->
-<main class="StackPage container fullhd">
+<main class="Treestatus StackPage container fullhd">
     {% include "treestatus/recent_changes.html" %}
 
     <h1>Treestatus: {{ tree }}</h1>
