add a button to go back to all trees from individual tree

--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -15,6 +15,7 @@
     <h1>Treestatus: {{ tree }}</h1>
     <p>Current status of {{ tree }}.</p>
 
+    <a href="{{ url_for("treestatus.treestatus") }}"><button class="button">Show All Trees</button></a>
     <div class="StackPage-stack">
         <table class="table">
             <thead>
